syntax = "proto3";
import "google/protobuf/timestamp.proto";

message StrategyCreatedEvent{
  string stock_id = 1;
  google.protobuf.Timestamp saved_at = 2;
  StrategyType type = 3;
  EventMeta meta = 4;
}

message EventMeta{
  bytes id = 1;
  google.protobuf.Timestamp occurred_at = 2;
  string service_name = 3;
  //  meta 정보에 trace_id와 같은 요청의 정보를 넣고 싶은데...
  // 애플리케이션과 proto message를 동시에 아우를 수 있는 방법이 있을까
}

enum StrategyType{
  UNDEFINED = 0;
  FINAL_PRICE_BATING_V1 = 1;
}